--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
+body {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.login {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.logindiv {
+  width: 400px;
+  height: 200px;
+  border-radius: 10px;
+  padding: 20px;
+  border: 2px solid black;
+  margin:auto;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.form-input {
+  height: 40px;
+  border: 3px solid black;
+}
+.form-input::placeholder {
+  color: black;
+}
+.submit {
+  height: 40px;
+  width: 100px;
+  margin-top: 20px;
+  background-color: black;
   color: white;
+  margin-right: 175px;
 }
 
-.App-link {
-  color: #61dafb;
+.register-div {
+  width: 400px;
+  height: 250px;
+  border-radius: 10px;
+  padding: 20px;
+  border: 2px solid black;
+  margin: auto;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.register-submit {
+  height: 40px;
+  width: 100px;
+  margin-top: 20px;
+  background-color: black;
+  color: white;
 }
